[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tuba"
version = "0.0.1"
authors = [
  { name="ao", email="ao@gmail.com" },
]
description = "tuba组件"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/AO-9911/tuba"
"Bug Tracker" = "https://github.com/AO-9911/tuba/issues"

[tool.setuptools.packages.find]
include = ["tuba*"]
exclude = ["*test*"]